--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Upload XML File</title>
+	<title>RRCS Web Interface</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 	<div class="xl-large">
-		<h1>Upload XML file</h1>
+		<h1>RRCS Web Interface</h1>
 	</div>
 	<br>
 	<div class="xl-large">
