--- a/templates/results.html
+++ b/templates/results.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>XML Upload Results</title
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-</head>
+<head></head>
 <body>
 	<div class="xl-large">
 		<h5>Response from server:</h5>
