--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<! Riedel, If you are reading this, I made this out of love and admiration. I don't mean to undermine anything you do.>
+
 <!DOCTYPE html>
 <html>
 <head>
