--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<! Riedel, If you are reading this, I made this out of love and admiration. I don't mean to undermine anything you do.>
+<!-- Riedel, If you are reading this, I made this out of love and admiration. I don't mean to undermine anything you do. -->
 
 <!DOCTYPE html>
 <html>
