--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,3 @@
-<!-- Riedel, If you are reading this, I made this out of love and admiration. I don't mean to undermine anything you do. -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,8 +21,15 @@
 	</form>
 	<!-- These are buttons  -->
 	<div class="xl-large">
+		<h4>Get info about the system:</h4>
+	</div>
+	<div class="xl-large">
 		<form id="buttons" method="post">
 			<button class="esbtn_blue button6" type="button" name="button001" onclick="button001_clicked();">Get ifb List</button>
+			<button class="esbtn_blue button6" type="button" name="button002" onclick="button002_clicked();">Get Logic Sources</button>
+			<button class="esbtn_blue button6" type="button" name="button003" onclick="button003_clicked();">Get Port</button>
+			<button class="esbtn_blue button6" type="button" name="button004" onclick="button004_clicked();">Print Error Codes</button>
+			<button class="esbtn_blue button6" type="button" name="button005" onclick="button005_clicked();">Is Artist There?</button>
 		</form>
 	</div>
 	<!-- This bit loads the response to the index.html page -->
@@ -62,6 +67,62 @@
         function button001_clicked() {
 			var xhr = new XMLHttpRequest();
 			xhr.open('POST', '/button001');
+			xhr.send();
+    
+			xhr.onload = function() {
+				if (xhr.status === 200) {
+					document.getElementById("response").innerHTML = xhr.responseText;
+				} else {
+					alert('Request failed. Status: ' + xhr.status);
+				}
+			};
+		}
+		
+		function button002_clicked() {
+			var xhr = new XMLHttpRequest();
+			xhr.open('POST', '/button002');
+			xhr.send();
+    
+			xhr.onload = function() {
+				if (xhr.status === 200) {
+					document.getElementById("response").innerHTML = xhr.responseText;
+				} else {
+					alert('Request failed. Status: ' + xhr.status);
+				}
+			};
+		}
+		
+		function button003_clicked() {
+			var xhr = new XMLHttpRequest();
+			xhr.open('POST', '/button003');
+			xhr.send();
+    
+			xhr.onload = function() {
+				if (xhr.status === 200) {
+					document.getElementById("response").innerHTML = xhr.responseText;
+				} else {
+					alert('Request failed. Status: ' + xhr.status);
+				}
+			};
+		}
+		
+		function button004_clicked() {
+			var xhr = new XMLHttpRequest();
+			xhr.open('POST', '/button004');
+			xhr.send();
+    
+			xhr.onload = function() {
+				if (xhr.status === 200) {
+					document.getElementById("response").innerHTML = xhr.responseText;
+				} else {
+					alert('Request failed. Status: ' + xhr.status);
+				}
+			};
+		}
+		
+		function button005_clicked() {
+			var xhr = new XMLHttpRequest();
+			xhr.open('POST', '/button005');
 			xhr.send();
     
 			xhr.onload = function() {
