--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- Riedel, If you are reading this, I have made this out of admiration for your system. No intention to plagiarize anything. -->
+
 <!DOCTYPE html>
 <html>
 <head>
