--- a/Audio_Routing_Server/templates/Audio_Routing.html
+++ b/Audio_Routing_Server/templates/Audio_Routing.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ACR VO Routing</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='VORoutingStyles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='AudioRoutingStyles.css') }}">
 	<script>
 	  function get_crosspoint_statuses() {
 		var xhr = new XMLHttpRequest();
